# polaris_2018

./: .gitignore  README.md
configuration/: common-packages.sh  jetsonSetup.sh  ros-packages.list  setup.sh  testCSICamera.sh  x11session.sh
ros/: #local.launch#  .#local.launch  autonomous.launch  camera_test.launch  data_acquisition.launch  env.sh  here-2.json  here.json  jetson.launch  launch.launch  local.launch  mc_checker.py  power_config.launch  rov.launch  test.c  test.launch  thing.json
ros/src/ai/: .commands_reverse.json.swp  .commands_reverse1.json.swo  .commands_reverse1.json.swp  .commands_reverse2.json.swp  .commands_straight.json.swo  .commands_straight.json.swp  CMakeLists.txt  commands_reverse.json  commands_reverse2.json  commands_straight.json  package.xml
ros/src/ai/json_cmds/: dont_move.json  forward.json  left.json  reverse.json  right.json  rise.json  rotate_cw.json  start_forward.json  start_reverse.json  stop.json  submerge.json
ros/src/ai/launchfiles/: autostart.launch  start_on_queue.launch
ros/src/ai/src/: master.cpp
ros/src/ai/srv/: start.srv
ros/src/depth_sensor/: CMakeLists.txt  package.xml
ros/src/depth_sensor/launchfiles/: depth_node.launch
ros/src/depth_sensor/src/: depth_sensor_node.cpp
ros/src/dsp/: CMakeLists.txt  package.xml
ros/src/dsp/include/: filter_base.hpp  fir_filter.hpp  median_filter.hpp
ros/src/dsp/src/: fir_filter.cpp  median_filter.cpp
ros/src/monitor/: CMakeLists.txt  devices.json  package.xml  power_board.json
ros/src/monitor/launchfiles/: serial.launch
ros/src/monitor/msg/: SerialDevice.msg
ros/src/monitor/src/: devices.hpp  serial_manager.cpp
ros/src/monitor/srv/: GetSerialDevice.srv  GetSerialDevices.srv
ros/src/navigation/: CMakeLists.txt  package.xml
ros/src/navigation/action/: Thrust.action
ros/src/navigation/launchfiles/: control_system.launch  depth_control.launch  rov.launch  rpm_controller.launch  thrustmap.launch
ros/src/navigation/msg/: depth_info.msg  joystick.msg  keyboard.msg  nav.msg  nav_request.msg  rov.msg  thrusts.msg
ros/src/navigation/src/: control_system.cpp  controllers.cpp  controllers.hpp  pid.cpp  pid.h  rov.cpp  rov_interface.h  rpm_controller.cpp  thrustmap.cpp
ros/src/navigation/srv/: control_en.srv
ros/src/peripherals/: CMakeLists.txt  package.xml
ros/src/peripherals/csv/: bandstop.csv  bandstop_tested.csv  highpass.csv  lowpass.csv
ros/src/peripherals/launchfiles/: depth_node.launch  hydrophones.launch  imu.launch  motors.launch  power_board.launch
ros/src/peripherals/msg/: depth.msg  hydro.msg  hydro_fft.msg  imu.msg  motor.msg  motor_enums.msg  motor_info.msg  orientation.msg  polar_num.msg  powerboard.msg  rpms.msg
ros/src/peripherals/src/: depth_sensor_node.cpp  fir_filter.hpp  hydrophones.cpp  imu.cpp  motor_controller.cpp  power_board.cpp
ros/src/peripherals/srv/: avg_data.srv  get_motor_enums.srv  hydro_data.srv  hydro_ffts.srv  hydro_phases.srv  motor.srv  motors.srv  power_enable.srv  set_vel.srv
ros/src/rov/: CMakeLists.txt  package.xml
ros/src/rov/msg/: joystick_message.msg
ros/src/rov/src/: joystick.cpp  joystick.h  joystick_node.cpp
ros/src/rov_controls/: CMakeLists.txt  package.xml
ros/src/rov_controls/launchfiles/: joystick_node.launch
ros/src/rov_controls/src/: joystick_node.cpp
ros/src/vision/: CMakeLists.txt  objects.json  package.xml
ros/src/vision/launchfiles/: camera.launch  camera_one.launch  classifier.launch  dice.launch  jetson_csi_cam.launch  polaris_bag.launch  reciever.launch  scanner.launch  sonia_bag.launch
ros/src/vision/msg/: dice_offsets.msg  offset_position.msg  planar_offset.msg
ros/src/vision/scripts/: classifier.py  dice.py  dice_detection_from_center.py  inference.py  objects.py  scanner.py  visualization_utils.py
ros/src/vision/src/: reciever.cpp  sender.cpp
ros/src/webgui/: .index.html.swp  CMakeLists.txt  hydrophone.html  index.html  navigation.html  package.xml  server.py  system.html  system_info.html  video.html  video_feed.html  webgui.launch
ros/src/webgui/css/: custom.css  overlay.css
ros/src/webgui/html_includes/: headers.html
ros/src/webgui/js/: controller.js  find_video_feeds.js  imu_vector_reset.js  keyboard.js  ros_out.js  set_thruster.js
ros/src/webgui/js/helpers/: connection.js  download_json.js
ros/src/webgui/js/services/: calibrate_depth.js  control_system_enable.js  get_devices.js  imu_vector_reset.js  power_board_services.js
ros/src/webgui/js/topics/: depth.js  imu.js  nav.js  nav_velocity.js  naviagtion_topics.js  power_board.js  send_nav.js  update_pwms.js  update_rpms.js
wiki/: README.md
