<?xml version="1.0"?>
<package>
  <name>ai</name>
  <version>0.0.0</version>
  <description>The AI package</description>

  <maintainer email="asinha@uvic.ca">asinha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>peripherals</build_depend>
  <build_depend>navigation</build_depend>
  <build_depend>vision</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>peripherals</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>vision</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
